# paper-firehose

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  agents.md  docker-compose.example.yml  docker-compose.yml  entry_summary.txt  feedfilter.py  feeds.json  history_viewer.html  history_viewer_cards.html  history_viewer_cards_pf.html  html_template.html  llm_prompts.json  llm_summary.py  llmsummary-template.html  llmsummary.py  llmsummary_template.html  openai_cli.py  paperqa_summarizer.py  pyproject.toml  requirements.txt  roadmap.md  rssparser.py  search_terms.json  test_openai_connection.py  testing.ipynb  view_db.py
.claude/commands/: paper-firehose.md
.github/workflows/: docs-release.yml  pages.yaml  pages.yml  publish.yml
archive/: filtered_articles_2024-09-20.html  perovs_filtered_articles_2024-09-20.html  rg_filtered_articles_2024-09-20.html
assets/: all_feed_entries.latest.db  all_feed_entries.previous.db  all_feed_entries.previous2.db  matched_entries_history.latest.db  matched_entries_history.previous.db  matched_entries_history.recent.db  papers.latest.db  papers.previous.db  papers.previous2.db  readme.md  seen_entries.db
assets/db_history/: all_feed_entries_20251028T081927Z.db  all_feed_entries_20251030T043132Z.db  all_feed_entries_20251031T043517Z.db  all_feed_entries_20251101T042911Z.db  all_feed_entries_20251102T042955Z.db  all_feed_entries_20251103T083733Z.db  all_feed_entries_20251104T064018Z.db  matched_entries_history_20250829T043147Z.db  matched_entries_history_20250830T043406Z.db  matched_entries_history_20250831T043100Z.db  matched_entries_history_20250901T043839Z.db  matched_entries_history_20250902T043250Z.db  matched_entries_history_20250902T130104Z.db  matched_entries_history_20250903T042949Z.db  matched_entries_history_20250904T043019Z.db  matched_entries_history_20250905T043238Z.db  matched_entries_history_20250906T043022Z.db  matched_entries_history_20250907T042945Z.db  matched_entries_history_20250908T043304Z.db  papers_20250912T142225Z.db  (+61 more)
claude-skills/: paper-firehose.md
cli/: main.py
config/: config.yaml
docs/: api.rst  conf.py  github_actions_setup.rst  index.rst  usage.rst
github_actions_config/: README.md  config.yaml
old/: feedfilter.py  feeds.json  llm_prompts.json  priority_journals.json  search_terms.json
old code/: cond-mat_parser.py
paper_firehose/: __init__.py
ranking_test/: test_ranking.py
scripts/: bootstrap_config.py  enrich_history_db_from_raw.py  merge_assets_old.py  migrate_history_db.py  test_gpt5_responses.py  vendor_model.py
tests/: test_command_context.py  test_config_cli.py  test_config_manager.py  test_config_validation.py  test_database.py  test_email_command.py  test_emailer.py  test_exit_codes.py  test_feed_processor.py  test_html_generator.py  test_http_client.py  test_migrate.py  test_paths.py  test_pipeline.py  test_query.py  test_st_ranker.py  test_status.py  test_summarize_api_key.py
(+84 files in other folders)
