[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "paper_firehose"
version = "0.3.5"
description = "Filter, rank, and summarize research-paper RSS feeds."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Nemes-Incze" },
]
requires-python = ">=3.10"
dependencies = [
    "feedparser==6.0.12",
    "PyYAML==6.0.3",
    "click==8.3.1",
    "sentence-transformers==5.3.0",
    "requests==2.32.5",
    "openai==2.29.0",
    "paper-qa==2026.3.18",
    "Pillow==12.1.1",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["rss", "llm", "research", "papers", "arxiv", "summaries"]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
]
docs = [
    "sphinx==9.0.4",
    "sphinx-autodoc-typehints==3.6.1",
    "furo==2025.12.19",
]

[project.scripts]
paper-firehose = "paper_firehose.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_firehose = [
    "system/**/*",
]
